--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "repl-nix-workspace"
 version = "0.1.0"
-description = "Add your description here"
+description = "Telegram bot for handling commands, fetching weather data, and more."
 requires-python = ">=3.11"
 dependencies = [
     "email-validator>=2.2.0",
@@ -13,4 +13,5 @@ dependencies = [
     "python-telegram-bot[job-queue]>=21.10",
     "requests>=2.32.3",
     "oauthlib>=3.2.2",
+    "python-dotenv>=1.0.0",
 ]
