--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 GOOGLE_API_KEY=AIzaSyDPrRLGXK0Wd12lE_i6DkYuBmUta8OqZFQ
 GOOGLE_SEARCH_ENGINE_ID=f67799191a4754602
-TELEGRAM_TOKEN=8151451706:AAEbkxGi5LuvECuDeATtA4y0fs08dUpe2yM
+TELEGRAM_BOT_TOKEN=8151451706:AAEbkxGi5LuvECuDeATtA4y0fs08dUpe2yM
 OPENWEATHER_API_KEY=bd5e378503939ddaee76f12ad7a97608
 TENOR_API_KEY=AIzaSyDPrRLGXK0Wd12lE_i6DkYuBmUta8OqZFQ
 GROUP_CHAT_ID = "-4230210888"
-FRIEND_USERNAME = "@mmt"
+FRIEND_USERNAME = "mmt"
